tests/idris2/error/perror035/expected
1/1: Building ParseError (ParseError.idr)
Error: Imports must go before any declarations or directives.

ParseError:5:1--5:7
 1 | module ParseError
 2 |
 3 | %default total
 4 |
 5 | import Data.Nat
     ^^^^^^

